@@ -1,18 +1,15 @@
 package nc.solon.person.controller;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
-import nc.solon.person.dto.ManualConsumeTaxOutDTO;
+import nc.solon.person.dto.TaxBatchInDTO;
 import nc.solon.person.dto.TaxInDTO;
-import nc.solon.person.event.TaxCalculationEvent;
 import nc.solon.person.service.TaxService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -24,123 +21,176 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
+/** The type Tax calculation controller unit test. */
 @ExtendWith(MockitoExtension.class)
 class TaxCalculationControllerUnitTest {
-
   @Mock private TaxService taxService;
 
-  @InjectMocks private TaxCalculationController controller;
+  @InjectMocks private TaxCalculationController taxCalculationController;
 
   private MockMvc mockMvc;
   private ObjectMapper objectMapper;
-  private TaxInDTO taxInDTO;
-  private List<TaxInDTO> taxBatch;
-  private ManualConsumeTaxOutDTO manualConsumeOutDTO;
 
+  private TaxInDTO validTaxInDTO;
+  private TaxBatchInDTO validBatchInDTO;
+
+  /** Sets up. */
   @BeforeEach
   void setUp() {
-    mockMvc = MockMvcBuilders.standaloneSetup(controller).build();
+    mockMvc = MockMvcBuilders.standaloneSetup(taxCalculationController).build();
     objectMapper = new ObjectMapper();
-
-    // Create test data
-    taxInDTO = new TaxInDTO();
-    taxInDTO.setTaxId("TAX-123");
-    taxInDTO.setAmount(BigDecimal.valueOf(1000.00));
-
-    TaxInDTO taxInDTO2 = new TaxInDTO();
-    taxInDTO2.setTaxId("TAX-456");
-    taxInDTO2.setAmount(BigDecimal.valueOf(2000.00));
-
-    taxBatch = Arrays.asList(taxInDTO, taxInDTO2);
-
-    List<TaxCalculationEvent> events =
-        Collections.singletonList(new TaxCalculationEvent("TAX-123", BigDecimal.valueOf(1000.00)));
-    manualConsumeOutDTO = new ManualConsumeTaxOutDTO(events, 5, true);
+    objectMapper.registerModule(new JavaTimeModule());
+    validTaxInDTO = new TaxInDTO("TAX123", new BigDecimal("100.00"));
+    validBatchInDTO = new TaxBatchInDTO(List.of(validTaxInDTO));
   }
 
+  /**
+   * Calculate tax with valid input should return ok.
+   *
+   * @throws Exception the exception
+   */
   @Test
-  void calculateTax_shouldCallServiceAndReturnAccepted() throws Exception {
-    // When/Then
-    mockMvc
-        .perform(
-            post("/api/v1/tax-calculation")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(taxInDTO)))
-        .andExpect(status().isAccepted());
-
-    // Verify service was called with correct parameter
-    verify(taxService, times(1)).calculateTax(any(TaxInDTO.class));
-  }
-
-  @Test
-  void calculateTaxBatch_shouldCallServiceAndReturnAccepted() throws Exception {
-    // When/Then
-    mockMvc
-        .perform(
-            post("/api/v1/tax-calculation/batch")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(taxBatch)))
-        .andExpect(status().isAccepted());
-
-    // Verify service was called with correct parameter
-    verify(taxService, times(1)).calculateTaxBatch(anyList());
-  }
-
-  @Test
-  void produceManual_shouldCallServiceAndReturnAccepted() throws Exception {
-    // When/Then
-    mockMvc
-        .perform(
-            post("/api/v1/tax-calculation/manual")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(taxBatch)))
-        .andExpect(status().isAccepted());
-
-    // Verify service was called with correct parameter
-    verify(taxService, times(1)).produceManual(anyList());
-  }
-
-  @Test
-  void consumeManual_shouldCallServiceWithDefaultCountAndReturnContent() throws Exception {
+  void calculateTax_withValidInput_shouldReturnOk() throws Exception {
     // Given
-    when(taxService.consumeManual(10)).thenReturn(manualConsumeOutDTO);
+    BigDecimal calculatedTax = new BigDecimal("20.00");
+    //    when(taxService.calculateTax(any(TaxInDTO.class))).thenReturn(calculatedTax);
 
-    // When/Then
+    // When & Then
     mockMvc
-        .perform(get("/api/v1/tax-calculation/manual"))
-        .andExpect(status().isOk())
-        .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$.batch[0].taxId").value("TAX-123"))
-        .andExpect(jsonPath("$.batch[0].amount").value(1000.00))
-        .andExpect(jsonPath("$.numberMessageLeft").value(5))
-        .andExpect(jsonPath("$.hasMessageLeft").value(true));
-
-    // Verify service was called with correct parameter (default count = 10)
-    verify(taxService, times(1)).consumeManual(10);
+        .perform(
+            post("/tax-calculation")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(validTaxInDTO)))
+        .andExpect(status().isAccepted());
   }
 
+  /**
+   * Calculate tax with invalid tax id should return bad request.
+   *
+   * @throws Exception the exception
+   */
   @Test
-  void consumeManual_shouldCallServiceWithCustomCount() throws Exception {
-    // Given
-    when(taxService.consumeManual(5)).thenReturn(manualConsumeOutDTO);
+  void calculateTax_withInvalidTaxId_shouldReturnBadRequest() throws Exception {
+    TaxInDTO invalidDTO = new TaxInDTO("", new BigDecimal("100.00"));
 
-    // When/Then
     mockMvc
-        .perform(get("/api/v1/tax-calculation/manual").param("count", "5"))
-        .andExpect(status().isOk());
-
-    // Verify service was called with custom count
-    verify(taxService, times(1)).consumeManual(5);
-  }
-
-  @Test
-  void consumeManual_shouldHandleParseException() throws Exception {
-    // When/Then - verify that invalid count parameter causes a 400 Bad Request
-    mockMvc
-        .perform(get("/api/v1/tax-calculation/manual").param("count", "invalid"))
+        .perform(
+            post("/tax-calculation")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(invalidDTO)))
         .andExpect(status().isBadRequest());
+  }
 
-    // Verify service was never called
-    verify(taxService, never()).consumeManual(anyInt());
+  /**
+   * Calculate tax with too long tax id should return bad request.
+   *
+   * @throws Exception the exception
+   */
+  @Test
+  void calculateTax_withTooLongTaxId_shouldReturnBadRequest() throws Exception {
+    TaxInDTO invalidDTO = new TaxInDTO("12345678901", new BigDecimal("100.00"));
+
+    mockMvc
+        .perform(
+            post("/tax-calculation")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(invalidDTO)))
+        .andExpect(status().isBadRequest());
+  }
+
+  /**
+   * Calculate tax with null amount should return bad request.
+   *
+   * @throws Exception the exception
+   */
+  @Test
+  void calculateTax_withNullAmount_shouldReturnBadRequest() throws Exception {
+    TaxInDTO invalidDTO = new TaxInDTO("TAX123", null);
+
+    mockMvc
+        .perform(
+            post("/tax-calculation")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(invalidDTO)))
+        .andExpect(status().isBadRequest());
+  }
+
+  /**
+   * Calculate tax with negative amount should return bad request.
+   *
+   * @throws Exception the exception
+   */
+  @Test
+  void calculateTax_withNegativeAmount_shouldReturnBadRequest() throws Exception {
+    TaxInDTO invalidDTO = new TaxInDTO("TAX123456789", new BigDecimal("-50.00"));
+
+    mockMvc
+        .perform(
+            post("/tax-calculation")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(invalidDTO)))
+        .andExpect(status().isBadRequest());
+  }
+
+  /**
+   * Calculate batch tax with valid input should return ok.
+   *
+   * @throws Exception the exception
+   */
+  @Test
+  void calculateBatchTax_withValidInput_shouldReturnOk() throws Exception {
+    // When & Then
+    mockMvc
+        .perform(
+            post("/tax-calculation/batch")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(validBatchInDTO)))
+        .andExpect(status().isAccepted());
+  }
+
+  /**
+   * Calculate batch tax with large batch should return ok.
+   *
+   * @throws Exception the exception
+   */
+  @Test
+  void calculateBatchTax_withLargeBatch_shouldReturnOk() throws Exception {
+    // Given
+    List<TaxInDTO> taxBatch = new ArrayList<>();
+    List<BigDecimal> calculatedTaxes = new ArrayList<>();
+
+    for (int i = 0; i < 100; i++) {
+      taxBatch.add(new TaxInDTO("TAX" + i, new BigDecimal("100.00")));
+      calculatedTaxes.add(new BigDecimal("20.00"));
+    }
+
+    TaxBatchInDTO largeBatchDTO = new TaxBatchInDTO(taxBatch);
+    //    when(taxService.calculateTaxBatch(any(TaxBatchInDTO.class))).thenReturn(calculatedTaxes);
+
+    // When & Then
+    mockMvc
+        .perform(
+            post("/tax-calculation/batch")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(largeBatchDTO)))
+        .andExpect(status().isAccepted());
+
+    //    verify(taxService).calculateTaxBatch(largeBatchDTO);
+  }
+
+  /**
+   * Calculate batch manual with valid input should return ok.
+   *
+   * @throws Exception the exception
+   */
+  @Test
+  void calculateBatchManual_withValidInput_shouldReturnOk() throws Exception {
+    // When & Then
+    mockMvc
+        .perform(
+            post("/tax-calculation/manual")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(validBatchInDTO)))
+        .andExpect(status().isAccepted());
   }
 }
